Use latest library and fix get ms views
